# carpet

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  TOOLCHAIN.md  main.py  mise.toml  pyproject.toml
leetcode/: two_sum.py
scripts/: new_problem.py
src/carpet/: main.py
tests/: test_two_sum.py
