[project]
name = "carpet"
version = "0.1.0"
description = "Python practice monorepo"
requires-python = ">=3.13"
dependencies = [
    "leetcode",
]

[project.scripts]
carpet = "carpet.main:main"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
leetcode = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "rapidfuzz>=3.10",
    "ruff>=0.15",
    "ty>=0.0.37",
]

[tool.ty.src]
include = ["src", "packages"]

[tool.ty.environment]
python = ".venv"
python-version = "3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--import-mode=importlib"]
testpaths = ["packages"]
